noinst_LIBRARIES = libVoiceBoard.a

libVoiceBoard_a_SOURCES = \
			ADSR.cc \
			Amplifier.cc \
			EnvelopeGenerator.cc \
			FValue.cc \
			NFValue.cc \
			Oscillator.cc \
			VoiceBoard.cc \
			Mixer.cc \
			Limiter.cc \
			Adder.cc \
			Multiplier.cc \
			LowPassFilter.cc \
			ProcessAndHold.cc \
			SoftLimiter.cc \
			FreqControlSignal.cc \
			FilterControlSignal.cc \
			AmpSection.cc \
			Distortion.cc \
			Reverb.cc \
			allpass.cpp \
			comb.cpp \
			revmodel.cpp

dnl libVoiceBoard_a_LIBADD = -lstdc++ -lm
