noinst_LIBRARIES = libVoiceBoard.a

libVoiceBoard_a_SOURCES = \
			ADSR.cc ADSR.h \
			Amplifier.cc Amplifier.h \
			EnvelopeGenerator.cc EnvelopeGenerator.h \
			FValue.cc FValue.h \
			NFValue.cc NFValue.h \
			Oscillator.cc Oscillator.h \
			VoiceBoard.cc VoiceBoard.h \
			Mixer.cc Mixer.h \
			Limiter.cc Limiter.h \
			Adder.cc Adder.h \
			Multiplier.cc Multiplier.h \
			LowPassFilter.cc LowPassFilter.h \
			ProcessAndHold.cc ProcessAndHold.h \
			SoftLimiter.cc SoftLimiter.h \
			FreqControlSignal.cc FreqControlSignal.h \
			FilterControlSignal.cc FilterControlSignal.h \
			AmpSection.cc AmpSection.h \
			Distortion.cc Distortion.h \
			Reverb.cc Reverb.h \
			allpass.cpp allpass.hpp \
			comb.cpp comb.hpp \
			revmodel.cpp revmodel.hpp tuning.h \
			Synth--.h denormals.h
