noinst_LIBRARIES = libdrivers.a

libdrivers_a_SOURCES = 	OSSMidiDriver.cc OSSMidiDriver.h \
			OSSAudioDriver.cc OSSAudioDriver.h \
			ALSAMidiDriver.cc ALSAMidiDriver.h \
			ALSAAudioDriver.cc ALSAAudioDriver.h \
			ALSAmmapAudioDriver.cc ALSAmmapAudioDriver.h \
			AudioInterface.cc AudioInterface.h \
			MidiInterface.cc MidiInterface.h \
			AudioDriver.h MidiDriver.h
