noinst_LIBRARIES = libdrivers.a

libdrivers_a_SOURCES = \
	ALSAAudioDriver.cc \
	ALSAAudioDriver.h \
	ALSAMidiDriver.cc \
	ALSAMidiDriver.h \
	ALSAmmapAudioDriver.cc \
	ALSAmmapAudioDriver.h \
	AudioDriver.h \
	AudioInterface.cc \
	AudioInterface.h \
	CoreAudio.cc \
	CoreAudio.h \
	MidiDriver.h \
	MidiInterface.cc \
	MidiInterface.h \
	OSSAudioDriver.cc \
	OSSAudioDriver.h \
	OSSMidiDriver.cc \
	OSSMidiDriver.h
