noinst_LIBRARIES = libdrivers.a

libdrivers_a_CPPFLAGS = \
    @ALSA_CFLAGS@ \
    @JACK_CFLAGS@ \
    @LASH_CFLAGS@ \
    @SNDFILE_CFLAGS@

libdrivers_a_SOURCES = \
	ALSAAudioDriver.cc \
	ALSAAudioDriver.h \
	ALSAMidiDriver.cc \
	ALSAMidiDriver.h \
	ALSAmmapAudioDriver.cc \
	ALSAmmapAudioDriver.h \
	AudioDriver.h \
	CoreAudio.cc \
	CoreAudio.h \
	MidiDriver.h \
	OSSAudioDriver.cc \
	OSSAudioDriver.h \
	OSSMidiDriver.cc \
	OSSMidiDriver.h
